--- a/package.json
+++ b/package.json
@@ -7,10 +7,24 @@
     "type": "git",
     "url": "git+https://github.com/matheussilvasantos/jekiti.js.git"
   },
+  "scripts": {
+    "clean": "rimraf dist/*",
+    "babel": "mkdirp dist && babel jekiti.js --out-file dist/jekiti.js",
+    "uglify": "mkdirp dist && uglifyjs dist/jekiti.js -m -c -o dist/jekiti.min.js",
+    "build": "run-s babel uglify"
+  },
   "author": "Matheus Silva Santos de Oliveira",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/matheussilvasantos/jekiti.js/issues"
   },
-  "homepage": "https://github.com/matheussilvasantos/jekiti.js#readme"
+  "homepage": "https://github.com/matheussilvasantos/jekiti.js#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "mkdirp": "^0.5.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "uglify-js": "^3.5.10"
+  }
 }
